--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+      Илья косых.
     </div>
     </footer>
   </body>
