--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
     </header>
     <div class="container">
       <section class="hero-image">
-      <h1 class="heading">Неопознанный Енот</h1>
-      <p>Junior верстальщик</p>
+      <h1 class="heading">Сайт чего-то</h1>
+      <p>Придумать описание</p>
     </section>
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
-      <h3>Пара слов о себе.</h3>
-      <p>Занимаюсь веб-разработкой уже 5 лет и создал боле 30 сайтов.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <h3>Пара слов о сайте.</h3>
+      <p> Тут выпендриваюсь</p>
+      <h3>Чем сайт может быть полезен</h3>
+      <p>Текст о том, чем сайт может быть полезен.</p>
     </section>
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
 
-      <h3>Сайт инструктора Кекса</h3>
+      <h3>Прикол №1</h3>
       <p>Небольшой лендинг о школе для начинающих.</p>
 
-      <h3>Блог начинающего верстальщика</h3>
+      <h3>Прикол №2</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
     </section>
   </div>
     <footer class="page-footer">
       <div class="container">
-      Илья косых.
+      Илья косых
     </div>
     </footer>
   </body>
